<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/black"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/btncurr"
                android:layout_width="102.857dp"
                android:gravity="center"
                android:layout_height="match_parent"
                android:textColor="@color/grey2"
                android:background="@color/black"
                android:text="@string/currency"
                android:textSize="12sp"
                style="?android:attr/buttonBarButtonStyle">

            </Button>

            <Button
                android:id="@+id/btnlength"
                android:layout_width="102.857dp"
                android:gravity="center"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:textColor="@color/grey2"
                android:text="@string/length"
                android:textSize="12sp"
                style="?android:attr/buttonBarButtonStyle">

            </Button>
            <Button
                android:id="@+id/btnarea"
                android:layout_width="102.857dp"
                android:gravity="center"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:textColor="@color/grey2"
                android:text="@string/area"
                android:textSize="12sp"
                style="?android:attr/buttonBarButtonStyle">

            </Button>
            <Button
                android:id="@+id/btnage"
                android:layout_width="102.857dp"
                android:gravity="center"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:text="@string/age"
                android:textColor="@color/grey2"
                android:textSize="12sp"
                style="?android:attr/buttonBarButtonStyle">

            </Button>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="246dp"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:ems="30" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:ignore="UselessParent"
            android:background="@color/black">

            <Button
                android:id="@+id/btnclearall"
                android:layout_width="102.857dp"
                android:gravity="center"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:textColor="@color/orange"
                android:text="@string/c"
                android:textSize="40sp"
                style="?android:attr/buttonBarButtonStyle">

            </Button>

            <Button
                android:id="@+id/btnbackspace"
                android:layout_width="102.857dp"
                android:gravity="center"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:textColor="@color/orange"
                android:text="@string/backspace"
                android:textSize="40sp"
                style="?android:attr/buttonBarButtonStyle">

            </Button>
            <Button
                android:id="@+id/btnpercent"
                android:layout_width="102.857dp"
                android:gravity="center"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:textColor="@color/orange"
                android:text="@string/percentage"
                android:textSize="40sp"
                style="?android:attr/buttonBarButtonStyle">

            </Button>
            <Button
                android:id="@+id/btndivide"
                android:layout_width="102.857dp"
                android:gravity="center"
                android:layout_height="match_parent"
                android:text="@string/divide"
                android:background="@color/black"
                android:textColor="@color/orange"
                android:textSize="40sp"
                style="?android:attr/buttonBarButtonStyle">

            </Button>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/black"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/btn7"
                android:layout_width="102.857dp"
                android:gravity="center"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:textColor="@color/white"
                android:text="@string/_7"
                android:textSize="40sp"
                style="?android:attr/buttonBarButtonStyle">

            </Button>

            <Button
                android:id="@+id/btn8"
                android:layout_width="102.857dp"
                android:gravity="center"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:textColor="@color/white"
                android:text="@string/_8"
                android:textSize="40sp"
                style="?android:attr/buttonBarButtonStyle">

            </Button>
            <Button
                android:id="@+id/btn9"
                android:layout_width="102.857dp"
                android:gravity="center"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:textColor="@color/white"
                android:text="@string/_9"
                android:textSize="40sp"
                style="?android:attr/buttonBarButtonStyle">

            </Button>
            <Button
                android:id="@+id/btnmultiply"
                android:layout_width="102.857dp"
                android:gravity="center"
                android:layout_height="match_parent"
                android:text="@string/multiply"
                android:background="@color/black"
                android:textColor="@color/orange"
                android:textSize="40sp"
                style="?android:attr/buttonBarButtonStyle">

            </Button>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:orientation="vertical"
        android:background="@color/black">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/btn4"
                android:layout_width="102.857dp"
                android:gravity="center"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:textColor="@color/white"
                android:text="@string/_4"
                android:textSize="40sp"
                style="?android:attr/buttonBarButtonStyle">

            </Button>

            <Button
                android:id="@+id/btn5"
                android:layout_width="102.857dp"
                android:gravity="center"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:textColor="@color/white"
                android:text="@string/_5"
                android:textSize="40sp"
                style="?android:attr/buttonBarButtonStyle">

            </Button>
            <Button
                android:id="@+id/btn6"
                android:layout_width="102.857dp"
                android:gravity="center"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:textColor="@color/white"
                android:text="@string/_6"
                android:textSize="40sp"
                style="?android:attr/buttonBarButtonStyle">

            </Button>
            <Button
                android:id="@+id/btnminus"
                android:layout_width="102.857dp"
                android:gravity="center"
                android:layout_height="match_parent"
                android:text="@string/minus"
                android:background="@color/black"
                android:textColor="@color/orange"
                android:textSize="40sp"
                style="?android:attr/buttonBarButtonStyle">

            </Button>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:orientation="vertical"
        android:background="@color/black">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/btn1"
                android:layout_width="102.857dp"
                android:gravity="center"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:textColor="@color/white"
                android:text="@string/_1"
                android:textSize="40sp"
                style="?android:attr/buttonBarButtonStyle">

            </Button>

            <Button
                android:id="@+id/btn2"
                android:layout_width="102.857dp"
                android:gravity="center"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:textColor="@color/white"
                android:text="@string/_2"
                android:textSize="40sp"
                style="?android:attr/buttonBarButtonStyle">

            </Button>
            <Button
                android:id="@+id/btn3"
                android:layout_width="102.857dp"
                android:gravity="center"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:textColor="@color/white"
                android:text="@string/_3"
                android:textSize="40sp"
                style="?android:attr/buttonBarButtonStyle">

            </Button>
            <Button
                android:id="@+id/btnplus"
                android:layout_width="102.857dp"
                android:gravity="center"
                android:layout_height="match_parent"
                android:text="@string/plus"
                android:background="@color/black"
                android:textColor="@color/orange"
                android:textSize="40sp"
                style="?android:attr/buttonBarButtonStyle">

            </Button>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/orien"
                android:layout_width="102.857dp"
                android:gravity="center"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:textColor="@color/blue"
                android:text="@string/l"
                android:textSize="40sp"
                style="?android:attr/buttonBarButtonStyle">

            </Button>

            <Button
                android:id="@+id/btnzero"
                android:layout_width="102.857dp"
                android:gravity="center"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:textColor="@color/white"
                android:text="@string/_0"
                android:textSize="40sp"
                style="?android:attr/buttonBarButtonStyle"
                tools:ignore="HardcodedText">

            </Button>
            <Button
                android:id="@+id/btndot"
                android:layout_width="102.857dp"
                android:gravity="center"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:textColor="@color/white"
                android:text="@string/dot"
                android:textSize="40sp"
                style="?android:attr/buttonBarButtonStyle">

            </Button>

            <Button
                android:id="@+id/btnequal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/orange"
                android:gravity="center"
                android:text="@string/equal"
                android:textColor="@color/white"
                android:textSize="50sp"
                style="?android:attr/buttonBarButtonStyle">

            </Button>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

